test/gator/policy/testdata/templates/test-policy-2.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: testpolicy2
spec:
  crd:
    spec:
      names:
        kind: TestPolicy2
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package testpolicy2
        violation[{"msg": msg}] {
          msg := "test violation 2"
        }
